--- a/pages/login.html
+++ b/pages/login.html
@@ -48,8 +48,7 @@
       </div><!-- /.container-fluid -->
     </nav>
     <section class="first-content contact">
-			<div class="container login">
-        <div class="well well-lg">
+			<div class="container login well well-lg">
           <h4>Log In</h4>
   				<div class="row contact-form">
   					<form>
@@ -61,7 +60,6 @@
   						<input class="btn btn-primary btn-red-lg wow animated fadeInUp" type="submit" value="Log In" />
   					</form>
           </div>
-				</div>
       </div>
 		</section>
     <footer class="copy-right">
