--- a/pages/signup.html
+++ b/pages/signup.html
@@ -51,21 +51,30 @@
 			<div class="container well well-lg">
 				<h4>Daftar</h4>
 				<p class="contact-head">Daftar dengan akun baru. Nikmati semua kemudahan
-        yang ada gratis!</p>
+        yang ada, gratis!</p>
 				<div class="row contact-form">
 					<form>
 						<div class="col-md-6 col-xs-6 col-sm-6 text-box">
-							<input type="text" placeholder="Firat Name" />
+							<input type="text" placeholder="First Name" />
 						</div>
 						<div class="col-md-6 col-xs-6 col-sm-6 text-box">
 							<input type="text" placeholder="Last Name" />
 						</div>
-            <div class="col-md-12 text-box">
+            <div class="col-md-6 text-box">
+              <input type="text" placeholder="Username" />
+            </div>
+            <div class="col-md-6 text-box">
               <input type="email" placeholder="e-Mail" />
+            </div>
+            <div class="col-md-6 text-box">
+              <input type="password" placeholder="Password" />
+            </div>
+            <div class="col-md-6 text-box">
+              <input type="password" placeholder="Konfirmasi Password" />
             </div>
             <div class="col-md-3 col-xs-3 col-sm-3 text-box">
               <select class="form-control">
-                <option value="KTP">KTM</option>
+                <option value="KTP">KTP</option>
                 <option value="KTM">KTM</option>
                 <option value="SIM">SIM</option>
                 <option value="Paspor">Paspor</option>
