--- a/pages/login.html
+++ b/pages/login.html
@@ -8,6 +8,7 @@
 
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/animate.min.css">
+    <link rel="stylesheet" href="../css/font-awesome.min.css">
     <link rel="stylesheet" href="../css/core.css">
     <link rel="stylesheet" href="../css/media.css">
 
@@ -47,21 +48,26 @@
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
     </nav>
-    <section class="first-content contact">
-			<div class="container login well well-lg">
-          <h4>Log In</h4>
-  				<div class="row contact-form">
-  					<form>
-              <div class="col-md-12 text-box">
-                <input type="email" placeholder="Username/email" />
-                <input type="password" placeholder="Password" />
-              </div>
-  						<div class="clearfix"> </div><br />
-  						<input class="btn btn-primary btn-red-lg wow animated fadeInUp" type="submit" value="Log In" />
-  					</form>
+    <header>
+      <section class="first-content contact">
+        <div class="row">
+          <div class="col-md-12 col-xs-12">
+            <div class="login center-block">
+              <div class="icon text-center"><i class="fa fa-fw fa-5x fa-user"></i></div>
+              <h4>Log In</h4>
+              <form>
+                <div class="text-box">
+                  <input class="input1" type="email" placeholder="Username/email" />
+                  <input class="input2" type="password" placeholder="Password" />
+                </div>
+                <div class="clearfix"> </div><br />
+                <input class="btn btn-primary btn-red-lg wow animated fadeInUp" type="submit" value="Log In" />
+              </form>
+            </div>
           </div>
-      </div>
-		</section>
+        </div>
+      </section>
+    </header>
     <footer class="copy-right">
       <p>Copyright &copy; 2017 <span>Get The Book.</span> All Rights Reserved.</p>
       <p>Design by<a href="http://w3layouts.com/">Array</a></p>
