--- a/pages/login.html
+++ b/pages/login.html
@@ -50,29 +50,66 @@
     </nav>
     <header>
       <section class="first-content contact">
-        <div class="row">
-          <div class="col-md-12 col-xs-12">
-            <div class="login center-block">
-              <div class="icon text-center"><i class="fa fa-fw fa-5x fa-user"></i></div>
-              <h4>Log In</h4>
-              <form>
-                <div class="text-box">
-                  <input class="input1" type="email" placeholder="Username/email" />
-                  <input class="input2" type="password" placeholder="Password" />
-                </div>
-                <div class="clearfix"> </div><br />
-                <input class="btn btn-primary btn-red-lg wow animated fadeInUp" type="submit" value="Log In" />
-              </form>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12 col-xs-12">
+              <div class="login center-block well">
+                <div class="icon text-center"><i class="fa fa-fw fa-5x fa-user"></i></div>
+                <h3 class="text-center">Log In</h3>
+                <form>
+                  <div class="text-box">
+                    <input class="input1" type="email" placeholder="Username/email" />
+                    <input class="input2" type="password" placeholder="Password" />
+                  </div>
+                  <div class="clearfix"> </div><br />
+                  <button class="btn btn-lg btn-primary wow animated fadeInUp center-block" type="submit">Log In</button>
+                </form>
+              </div>
             </div>
           </div>
         </div>
       </section>
     </header>
-    <footer class="copy-right">
-      <p>Copyright &copy; 2017 <span>Get The Book.</span> All Rights Reserved.</p>
-      <p>Design by<a href="http://w3layouts.com/">Array</a></p>
+    <footer>
+      <section class="dark">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-3">
+              <a href="#">
+                <div class="block help text-center">Hubungi kami</div>
+              </a>
+              <a href="#">
+                <div class="block help text-center">Tips belanja aman</div>
+              </a>
+              <a href="#">
+                <div class="block help text-center">Tips measas</div>
+              </a>
+            </div>
+            <div class="col-md-6 about">
+              <div class="col-md-12">
+                <a class="block" href="#"><h4>Copyright Gedebuk &copy; 2017</h4></a>
+                <div class="col-md-4 no-padding">
+                  <a href="">About Us</a>
+                </div>
+                <div class="col-md-8 no-padding">
+                  <a href="">FAQ</a>
+                </div>
+                <div class="col-md-4 no-padding">
+                  <a href="">About Us</a>
+                </div>
+                <div class="col-md-8 no-padding">
+                  <a href="">FAQ</a>
+                </div>
+              </div>
+          </div>
+          <div class="col-md-3" id="logo">
+            <abbr title="developed by GUAdev"><img src="../GUAdev.jpg" class="pull-right guadev img-circle" alt="GUAdev"></abbr>
+          </div>
+        </div>
+      </section>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="../js/parallax.min.js"></script>
     <script src="../js/wow.min.js"></script>
     <script type="text/javascript">
       new WOW().init();
