--- a/pages/signup.html
+++ b/pages/signup.html
@@ -48,9 +48,10 @@
       </div><!-- /.container-fluid -->
     </nav>
     <section class="first-content contact">
+      <div class="bg"></div>
 			<div class="container well well-lg first-content">
 				<div class="row contact-form">
-          <h4>Daftar</h4>
+          <h2 class="text-center">Daftar</h2>
           <p class="contact-head">Daftar dengan akun baru. Nikmati semua kemudahan
             yang ada, gratis!</p>
 					<form class="first-content">
@@ -92,14 +93,48 @@
                   <p>Setuju dengan semua <a class="text-warning" href="#">syarat</a> dan <a class="text-warning" href="#">ketentuan <a href="#">gedebuk.com</a></a></p>
                 </div>
               </div>
-              <input class="btn btn-primary btn-red-lg" type="submit" value="Sign up" />
+              <button type="button" class="btn btn-lg btn-primary center-block" name="button">Daftar</button>
             </div>
 					</form>
 				</div>
 		</section>
-    <footer class="copy-right">
-      <p>Copyright &copy; 2017 <span>Get The Book.</span> All Rights Reserved.</p>
-      <p>Design by<a href="http://w3layouts.com/"><i class="fa fa-fuck"></i></a></p>
+    <footer>
+      <section class="dark">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-3">
+              <a href="#">
+                <div class="block help text-center">Hubungi kami</div>
+              </a>
+              <a href="#">
+                <div class="block help text-center">Tips belanja aman</div>
+              </a>
+              <a href="#">
+                <div class="block help text-center">Tips measas</div>
+              </a>
+            </div>
+            <div class="col-md-6 about">
+              <div class="col-md-12">
+                <a class="block" href="#"><h4>Copyright Gedebuk &copy; 2017</h4></a>
+                <div class="col-md-4 no-padding">
+                  <a href="">About Us</a>
+                </div>
+                <div class="col-md-8 no-padding">
+                  <a href="">FAQ</a>
+                </div>
+                <div class="col-md-4 no-padding">
+                  <a href="">About Us</a>
+                </div>
+                <div class="col-md-8 no-padding">
+                  <a href="">FAQ</a>
+                </div>
+              </div>
+          </div>
+          <div class="col-md-3" id="logo">
+            <abbr title="developed by GUAdev"><img src="../GUAdev.jpg" class="pull-right guadev img-circle" alt="GUAdev"></abbr>
+          </div>
+        </div>
+      </section>
     </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="../js/wow.min.js"></script>
